Bump version to flyway-11.19.0
Please see the GH release for the release notes

CLI now ships with Java 25